# Mouse_Crosshairs

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  config_file_util.cpp  config_file_util.h  crosshair.cpp  crosshair.h  crosshair.ini  hotkey.cpp  hotkey.h  main.cpp  resource.rc
.github/workflows/: auto-build.yml
res/: icon.afphoto  resource.rc
src/: config.cpp  config.h  config_file_util.cpp  config_file_util.h  crosshair.cpp  crosshair.h  hotkey.cpp  hotkey.h
